--- a/src/container/index/index.hbs
+++ b/src/container/index/index.hbs
@@ -1,13 +1,6 @@
-{{! 
-Це код container файлу для index сторінки, 
-в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
- }}
-
-<div >
-  Hello world!
+<div class="list__menu">
+  <ul>
+    <li><a href="/product-list" class="item__menu color-blue">Список товарів</a></li>
+    <li><a href="/product-create" class="item__menu color-blue">Створити товар</a></li>
+  </ul>
 </div>
-
-{{! 
-    Цей код містить лише те, що буде виводитись в <body>
-    Адже наш layout/default.hbs має вже структуру HTML
-}}
