--- a/src/container/alert/index.hbs
+++ b/src/container/alert/index.hbs
@@ -1,4 +1,4 @@
-<main>
+{{!-- <main>
     <section>
         <div class="page">
             <div>
@@ -7,6 +7,20 @@
             </div>
             <div class="page__block-right">
                 <a href="/product-list" class="page__button">Повернутись назад</a>
+            </div>
+        </div>
+    </section>
+</main> --}}
+
+<main>
+    <section>
+        <div class="page">
+            <div>
+                <h5 class="page__title">{{data.message}}</h5>
+                <div class="info">{{data.info}}</div>
+            </div>
+            <div class="page__block-right">
+                <a href="{{data.link}}" class="page__button">Повернутись назад</a>
             </div>
         </div>
     </section>
